--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "scripts": {
     "dev": "vite",
     "preview": "vite preview",
-    "build": "vite build"
+    "build": "rimraf build && vite build",
+    "ios:init": "cap add ios",
+    "android:init": "cap add ios",
+    "preios": "npm run build",
+    "preandroid": "npm run build",
+    "ios": "cap run ios",
+    "android": "cap run android"
   },
   "dependencies": {
+    "@capacitor/android": "5.0.3",
+    "@capacitor/core": "5.0.3",
+    "@capacitor/ios": "5.0.3",
     "@vitejs/plugin-react": "4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -15,8 +24,10 @@
     "vite-tsconfig-paths": "4.2.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "5.0.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
-    "@types/styled-components": "5.1.26"
+    "@types/styled-components": "5.1.26",
+    "rimraf": "5.0.1"
   }
 }
