--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev": "vite",
     "preview": "vite preview",
     "build": "rimraf build && vite build",
-    "ios:init": "cap add ios",
+    "ios:init": "cap add ios && cap copy ios && cap open ios",
     "android:init": "cap add android && cap copy android && cap open android",
     "preios": "npm run build",
     "preandroid": "npm run build",
